move index.html to root dir

--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
     <center>
         <table width="1500" border="1">
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim1/mix.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim1/mix.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Mixture</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim1/se.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim1/se.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Restorative SE-LSTM</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim1/codec.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim1/codec.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Restorative SE-codec</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim1/heming.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim1/heming.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Wang et al. [1]</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim1/clean.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim1/clean.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Dry Clean</strong></center></p>
             </td>
         </table>
@@ -90,23 +90,23 @@
     <center>
         <table width="1500" border="1">
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim2/mix.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim2/mix.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Mixture</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim2/se.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim2/se.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Restorative SE-LSTM</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim2/codec.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim2/codec.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Restorative SE-codec</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim2/heming.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim2/heming.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Wang et al. [1]</strong></center></p>
             </td>
             <td width="280">
-            <p><center><audio width="260" controls><source src="../demo/sim2/clean.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="260" controls><source src="demo/sim2/clean.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Dry Clean</strong></center></p>
             </td>
         </table>
@@ -123,19 +123,19 @@
     <center>
         <table width="1500" border="1">
             <td width="350">
-            <p><center><audio width="330" controls><source src="../demo/real/mix.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="330" controls><source src="demo/real/mix.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Mixture</strong></center></p>
             </td>
             <td width="350">
-            <p><center><audio width="330" controls><source src="../demo/real/our_se.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="330" controls><source src="demo/real/our_se.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Restorative SE-LSTM</strong></center></p>
             </td>
             <td width="350">
-            <p><center><audio width="330" controls><source src="../demo/real/our_codec.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="330" controls><source src="demo/real/our_codec.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Restorative SE-codec</strong></center></p>
             </td>
             <td width="350">
-            <p><center><audio width="330" controls><source src="../demo/real/heming.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
+            <p><center><audio width="330" controls><source src="demo/real/heming.wav" type="audio/wav" >Your browser does not support the audio element.</audio></center></p>
             <p><center><strong>Wang et al. [1]</strong></center></p>
             </td>
         </table>
