--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
     <!-- <p  style="margin-bottom:3cm;">"  "</p> -->
     <h2 id="title" class="auto-style1"><center>Restorative Speech Enhancement: A Progressive Approach Using SE and Codec Modules for Noise and Reverberation Reduction</center></h2>
     <p class="auto-style7" align="center">
-        <a href="https://github.com/sophie091524" target="_blank">Hsin-Tien Chiang</a>&nbsp;&nbsp;&nbsp;
-        <a href="https://scholar.google.com/citations?user=DmFX6JsAAAAJ" target="_blank">Hao Zhang</a>&nbsp;&nbsp;&nbsp;
-        <a href="https://scholar.google.com/citations?user=nCmKPM4AAAAJ" target="_blank">Yong Xu</a>&nbsp;&nbsp;&nbsp;
-        <a href="https://scholar.google.com/citations?user=pxFJcEEAAAAJ" target="_blank">Meng Yu</a>&nbsp;&nbsp;&nbsp;
-        <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ" target="_blank">Dong Yu</a>
+        <a href="https://github.com/sophie091524" target="_blank">Hsin-Tien Chiang<sup>1</sup></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://scholar.google.com/citations?user=DmFX6JsAAAAJ" target="_blank">Hao Zhang<sup>2</sup></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://scholar.google.com/citations?user=nCmKPM4AAAAJ" target="_blank">Yong Xu<sup>2</sup></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://scholar.google.com/citations?user=pxFJcEEAAAAJ" target="_blank">Meng Yu<sup>2</sup></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ" target="_blank">Dong Yu<sup>2</sup></a>
         
     </p>
     <p class="auto-style7" align="center">
-        Tencent AI Lab, Bellevue, WA, USA
+        <sup>1</sup>The University of Texas at Dallas, Richardson, TX, USA
+    </p>
+    <p class="auto-style7" align="center">
+        <sup>2</sup>Tencent AI Lab, Bellevue, WA, USA
     </p>
 
     <!-- Abstract -->
@@ -147,7 +150,7 @@
     <p id="ref_1" class="auto-style5">
         [1] H. Wang, M. Yu, H. Zhang, C. Zhang, Z. Xu, M. Yang, Y. Zhang, and D. Yu, "Unifying robustness and fidelity: A comprehensive study of pretrained generative methods for speech enhancement in adverse conditions," arXiv preprint arXiv:2309.09028, 2023.
     </p>
-    <p class="auto-style1"><font color="#999999">Last update: August 28, 2024</font></p>
+    <p class="auto-style1"><font color="#999999">Last update: September 8, 2024</font></p>
 </body>
 
 </html>
